fix(cards): Avoid lowercase letters cut off #794

--- a/src/assets/components/base.scss
+++ b/src/assets/components/base.scss
@@ -4,7 +4,7 @@
 
 @mixin ellipsis() {
   white-space: nowrap;
-  overflow: hidden;
+  overflow-x: hidden;
   text-overflow: ellipsis;
 }
 
@@ -171,9 +171,9 @@
 
       .title {
         font-size: 1.1em;
-        line-height: 1.2em;
+        line-height: 1.3em;
         font-weight: 500;
-        margin-bottom: 4px;
+        margin-bottom: 3px;
         @include ellipsis();
       }
 
